# WiktionaryInflectionBot

./: .gitignore  Cargo.toml  LICENSE  README.md  WebData.json  bookkeeper.json  bookkeeper.txt  edited_words.txt  main.py  samples.txt  word_list.json
src/: bookkeeper.rs  constants.rs  data_formats.rs  fixes.rs  link_gather.rs  main.rs  manipulation.rs  online.rs  page_generation.rs  util.rs
