[package]
name = "wiktbot_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1.35.1", features = ["full"] }
reqwest = { version = "0.11.23", features = ["blocking","json"] }
scraper = "0.18.1"
urlencoding = "2.1.3"
strum = { version = "0.25", features = ["derive"] }
strum_macros = {version = "0.25.3"}
regex = "1.10.2"
edit-distance = {version = "2.1.0"}
chrono = "0.4.31"
chrono-tz = "0.8.5"